--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/push-notification-ios": "^1.4.0",
+    "@react-native-firebase/analytics": "^7.4.1",
+    "@react-native-firebase/app": "^8.2.0",
+    "@react-native-firebase/messaging": "^7.5.0",
     "@react-navigation/bottom-tabs": "^5.7.2",
     "@react-navigation/drawer": "^5.8.6",
     "@react-navigation/native": "^5.7.1",
@@ -21,7 +25,9 @@
     "axios": "^0.19.2",
     "react": "16.13.1",
     "react-native": "0.63.0",
+    "react-native-device-info": "^5.6.3",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-push-notification": "^4.0.0",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
