--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@react-navigation/drawer": "^5.8.6",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
+    "@types/react-native-push-notification": "^5df.0.5",
     "axios": "^0.19.2",
     "react": "16.13.1",
-    "react-native": "0.63.0",
-    "react-native-device-info": "^5.6.3",
+    "react-native": "^0.63.0",
+    "react-native-device-info": "^5.6.5",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-push-notification": "^4.0.0",
     "react-native-reanimated": "^1.10.1",
